# BigotesyPaticas

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  BigotesyPaticas  BigotesyPaticas.py  Makefile  README.md  factura.html  package.json  packages.txt  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/admin/: .env.example  Dockerfile  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/admin/public/: site.webmanifest
apps/admin/src/app/: globals.css  layout.tsx
apps/admin/src/components/: InviteToPortalModal.tsx  ShareStoreModal.tsx  providers.tsx  sidebar.tsx
apps/admin/src/lib/: api.ts  auth-store.ts  utils.ts
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  requirements-dev.txt  requirements.txt  start.sh
apps/api/alembic/: env.py
apps/api/app/: __init__.py  config.py  db.py  deps.py  main.py  middleware.py  security.py
apps/api/app/api/: __init__.py
apps/api/scripts/: backfill_portal_to_sales.py  generate_story.py  plan_content_week.py  preprocess_product_images.py  publish_feed_posts.py  publish_scheduled_posts.py  publish_stories.py  seed_content_templates.py  setup_audio_tracks.py  sync_gbp_reviews.py  sync_product_photos_from_drive.py
apps/api/templates/: carnet_pet.html
apps/api/tests/: conftest.py  test_smoke.py
apps/portal/: .env.example  Dockerfile  next.config.mjs  package.json  tailwind.config.ts
apps/portal/public/: manifest.json  sw.js
apps/store/: .env.example  Dockerfile  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/store/public/: 7mimi866606do0F42do9b244mi6a62mi208374.txt  site.webmanifest  tarjeta.html
apps/store/src/: middleware.ts
bp_common/: __init__.py  audit.py  currency.py  flags.py  ids.py  logging_setup.py  payments.py  pricing.py  sheets_sanitize.py  tz.py  version_info.py
docs/: API_STRATEGY.md  ARCHITECTURE_ANALYSIS.md  COOLIFY_DEPLOY.md  DATABASE_STRATEGY.md  DEVOPS_STRATEGY.md  FRONTEND_STRATEGY.md  IMAGE_NAMING_GUIDE.md  INCIDENT_2026-05-10_secrets_in_example.md  META_SETUP_MANUAL_DIEGO.md  MIGRATION_MASTER_PLAN.md  MONOREPO.md  SPRINT0_HARDENING.md  SPRINT1_SESSION3.md  SPRINT1_STATUS.md  SYSTEM_AUDIT.md  TECH_DEBT_REPORT.md  gbp-optimization-checklist.md  local-citations-list.md  project-continuity.md
infrastructure/docker/: docker-compose.yml
local-assets/: .gitignore  README.md
page/: Compras.py
pages/: 1_📦_Inventario_Avanzado.py  3_Nexus_Loyalty.py  Analisis_financiero.py  Compras.py  Inventario_Nexus.py  Nexus_Loyalty.py  Producto_360.py
project-secrets/: .env.example  .env.local.example  .env.production.example  MISSING_SECRETS.md  SECRETS_SETUP.md
scripts/: README.md  audit_links.py  backup_sheets.py  enrich_products_catalog.py  generate_blog_posts.py  generate_brand_assets.py  generate_seo_landings.py  migrate_clean_slugs.py  seo_push.py  sync_gbp_reviews.py  tag_products_with_ai.py  upload_brand_to_cdn.py
scripts/etl/: convert_secrets.py  sheets_to_pg.py  xlsx_inventory_import.py
scripts/media/: optimize_images.py  upload_to_spaces.py  validate_naming.py
tests/: README.md  conftest.py
tests/golden/: test_currency_golden.py  test_ids_golden.py  test_payments_golden.py  test_pricing_golden.py
tests/unit/: test_audit.py  test_flags_version_logging.py  test_sheets_sanitize.py
(+221 files in other folders)
